# Agentic-QA-Platform

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  FILE_LISTING.md  GETTING_STARTED.md  LICENSE  PROJECT_COMPLETION.txt  QUICKSTART.md  README.md  ROADMAP.md  examples.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  tasks.py
requirements_folder/: shopping_cart.md  user_registration.md
src/: __init__.py  main.py  utils.py
src/agents/: requirement_agent.py
src/config/: logging_config.py  settings.py
src/database/: config.py  models.py  services.py
src/models/: schemas.py
src/workflows/: file_processor.py  qa_workflow.py
tests/: conftest.py  test_database.py  test_requirement_agent.py  test_workflow.py
